# gtk-telegraph

./: .gitignore  Makefile.in  README.md  aclocal.m4  configure  configure.ac  details.txt
css/: main.css  main_dark.css  main_light.css
src/: Makefile.am  Makefile.in  client.c  client.c~  client.h  client.h~  controller.c  controller.c~  controller.h  gtk_telegraph.c  gtk_telegraph.c~  gtk_telegraph.h  gtk_telegraph.h~  gtk_telegraph.ui  main.c  main.c~  serverDataModel.h  serverDataModel.h~
